# DiffeoForge

./: .dockerignore  .gitattributes  .gitignore  AI_USAGE.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
container/: Dockerfile
distribution/: desktop-contract-v0.1.json
docs/: ARCHITECTURE.md  ATLAS_PCA.md  BLOCKWISE_GAUSSIAN.md  CENTERED_GAUSSIAN_MATRIX.md  CONTAINER_REFERENCE.md  DATA_ASSISTED_PARAMETERS.md  DEFERRED_ARMIJO_GRADIENTS.md  DESKTOP_DEPENDENCY_METADATA_EVIDENCE.md  DESKTOP_DISTRIBUTION.md  DESKTOP_PREVIEW.md  DESKTOP_REFERENCE_EXECUTION.md  DESKTOP_REFERENCE_PREPARATION_STATUS.md  DESKTOP_SAVED_REFERENCE_PREPARATION_STATUS_VERIFICATION.md  DESKTOP_SBOM.md  DESKTOP_WORKER.md  FIRST_RUN.md  FROZEN_REFERENCE_PARENT_DEATH.md  FROZEN_REFERENCE_PREPARATION_PARENT_DEATH.md  FROZEN_REFERENCE_PREPARATION_WORKER.md  FULL_ATLAS_OPTIMIZER.md  HIGH_DETAIL_SURFACES.md  INNO_PORTABLE_TOOLCHAIN_EVIDENCE.md  INNO_SIGNATURE_EVIDENCE.md  INNO_TOOLCHAIN_EVIDENCE.md  INSTALLER_BUILD_EVIDENCE.md  INSTALLER_INSTALLATION_EVIDENCE.md  MANAGED_REFERENCE_RUNTIME.md  MESH_QUALITY.md  MODERN_ATLAS_BUNDLE.md  MODERN_BENCHMARK.md  MODERN_BENCHMARK_MATRIX_DESIGN.md  MODERN_BENCHMARK_MATRIX_STUDY.md  MODERN_BENCHMARK_STUDY.md  MODERN_ENGINE_FEASIBILITY.md  MODERN_OPTIMIZER_BENCHMARK.md  MODERN_OPTIMIZER_BENCHMARK_DESIGN.md  MODERN_PROGRESS.md  MODERN_WORKFLOW.md  MODERN_WORKLOAD.md  MOMENTA_OPTIMIZER.md  (+30 more)
examples/: minimal-atlas-container.yaml  minimal-atlas.yaml  minimal-modern-atlas-blockwise.yaml  minimal-modern-atlas.yaml
tests/: test_atlas_objective.py  test_atlas_optimizer.py  test_atomic_io.py  test_backend.py  test_blockwise_engine.py  test_blockwise_objective.py  test_cli.py  test_config.py  test_desktop_app.py  test_desktop_aspect_svg_widget.py  (+92 more)
(+346 files in other folders)
