[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "diffeoforge"
version = "0.0.0.dev0"
description = "Reproducible diffeomorphic atlas workflows for 3D surface meshes"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Jenny Hein" },
]
keywords = [
  "atlas",
  "diffeomorphism",
  "geometric morphometrics",
  "LDDMM",
  "surface mesh",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
analysis = [
  "numpy>=2,<3",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]
modern-engine = [
  "numpy>=2,<3",
  "torch>=2.6,<2.14",
]

[project.scripts]
diffeoforge = "diffeoforge.cli:main"

[project.urls]
Repository = "https://github.com/heinjenny95/DiffeoForge"
Issues = "https://github.com/heinjenny95/DiffeoForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/diffeoforge"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/reference",
  "/tools",
  "/container",
  "/.dockerignore",
  "/README.md",
  "/LICENSE",
  "/AI_USAGE.md",
  "/CONTRIBUTING.md",
  "/ROADMAP.md",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
